--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <section>
         <div class="container">
             <div class="text">
-
-                <p>SMOOTH MOVING FOR YOUR FAMILY</p>
-                <h1>Moving Strive to <br>Make it Easy</h1>
-
+                    <p>SMOOTH MOVING FOR YOUR FAMILY</p><br>
+                    <h2>Moving Strive to<br> Make it Easy</h2>
+                    
+                </div>
 
             </div>
         </div>
